Bug 666672 - Fix OSX compile warnings in sydneyaudio and vorbis.  r=giles