media/libvorbis/update.sh
@@ -47,3 +47,4 @@ cp $1/COPYING ./COPYING
 cp $1/README ./README
 cp $1/AUTHORS ./AUTHORS
 patch -p3 < ./alloca.diff
+patch -p3 < ./bug666672_gccWarnings.diff
